 * hookutils.py: Fix generation of valid report key names from arbitrary paths
   in attach_file() and related functions. This will now replace all invalid
   characters with dots, not just a few known invalid ones. (LP: #1566975)
 * problem_report.py: Instead of AssertionError, raise a ValueError for invalid
   key names and TypeError for invalid kinds of values. Thanks Barry Warsaw.

2.20.1 (2016-03-31)
-------------------
 * Fix signal_crashes.test_modify_after_start test when running as root.
 * Relax report.test_add_gdb_info gdb warning check, as this changed with gdb
   7.10.90.
 * crash-digger: Untag bugs which cannot be retraced instead of stopping
   crash-digger. This led to too many pointless manual restarts on broken bug
   reports.
 * Disambiguate overly generic Python exceptions in duplicate signature
   computation: dbus-glib's DBusException wraps a "real" server-side exception,
   so add the class of that to disambiguate different crashes; for OSError
   that is not a known subclass like FileNotFoundError, add the errno.
   (LP: #989819)

2.20 (2016-02-12)
-----------------
 * Reimplement forwarding crashes into a container, via activating the new
   apport-forward.socket in the container and handing over the core dump fd.
   This is a much safer way than the original implementation with nsexec.
   Thanks Stéphane Graber! (LP: #1445064)
 * Drop obsolete signal_crashes.test_ns_forward_privilege() test case. This
   code was dropped long ago.

2.19.4 (2016-01-26)
-------------------
 * Fix fileutils.test_find_package_desktopfile test for symlinks and other
   unowned files in /usr/share/applications/.
 * Fix ui.test_run_crash_anonymity test case to not fail if the base64 encoded
   core dump happens to contain the user name, as that's just by chance.
 * Fix test_hooks.py for unreleased gcc versions which have a different
   --version format.
 * hookutils.py, attach_hardware(): Stop attaching /var/log/udev. This was an